<resources>
    <string name="app_name">TIC TAC TOE</string>
    <string name="add_players">Enter Player Names</string>
    <string name="enter_player_name">Enter Player Name</string>
    <string name="player_one">Enter Player 1 Name</string>
    <string name="player_two">Enter Player 2 Name</string>
    <string name="start_game">START GAME</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="message_here">Message Here</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="exit">EXIT</string>
    <string name="or">OR</string>
    <string name="designed_by">Designed By</string>
    <string name="version">version 1.0.0</string>
    <string name="choose_player_mode">Choose Player Mode</string>
    <string name="single_player">SINGLE PLAYER</string>
    <string name="multi_player">MULTI PLAYER</string>
    <string name="offline">OFFLINE</string>
    <string name="online">ONLINE</string>
    <string name="create_room">CREATE ROOM</string>
    <string name="join_room">JOIN</string>
    <string name="enter_room_code">Enter Room ID</string>
    <string name="choose_multiplayer_mode">CHOOSE YOUR MODE</string>
    <string name="room_id">Room Id: </string>
    <string name="id">270520</string>
    <string name="ai">AI</string>
    <string name="rate_us">Rate Us</string>
    <string name="exit_btn">Exit</string>
    <string name="settings">Settings</string>
    <string name="settings_btn">SETTINGS</string>
    <string name="txt_continue">CONTINUE</string>
    <string name="enter_user_name">Enter Player Name</string>
    <string name="play_btn">PLAY</string>
    <string name="vs_AI">Vs AI</string>
    <string name="play_N_pass">PLAY N PASS</string>
    <string name="are_you_sure">Are you sure you want to exit ?</string>
    <string name="exit_app">Exit</string>
    <string name="confirm_exit">Confirm Exit</string>
    <string name="cancel">Cancel</string>
    <string name="you">You</string>
</resources>