<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".AddPlayers">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="25dp"
            android:background="@drawable/background">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btn_play"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:text="@string/play_btn"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btn_online"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:text="@string/online"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btn_settings"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:text="@string/settings_btn"
                android:textSize="18sp"
                app:cornerRadius="20dp"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="70dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/exit_btn"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/exit_btn"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exit_btn"
                        android:textColor="@color/white"
                        android:layout_marginTop="5dp"
                        android:textSize="17sp"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginLeft="150dp"
                    android:layout_marginStart="150dp">

                    <ImageView
                        android:id="@+id/rate_us"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/google_play"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rate_us"
                        android:textColor="@color/white"
                        android:layout_marginTop="5dp"
                        android:textSize="17sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>