<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".AddPlayers">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/background">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_players"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/PlayerOneName"
                android:background="@drawable/round_back_dark_blue"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:maxLines="1"
                android:textStyle="bold"
                android:hint="@string/player_one"
                android:textColorHint="@color/light_white"
                android:inputType="text"
                android:textColor="@color/white"
                android:drawableStart="@drawable/ic_xicon"
                android:drawableLeft="@drawable/ic_xicon"
                android:drawablePadding="8dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/PlayerTwoName"
                android:background="@drawable/round_back_dark_blue"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:inputType="text"
                android:maxLines="1"
                android:textStyle="bold"
                android:hint="@string/player_two"
                android:textColorHint="@color/light_white"
                android:textColor="@color/white"
                android:drawableStart="@drawable/ic_oicon"
                android:drawableLeft="@drawable/ic_oicon"
                android:drawablePadding="8dp"/>

            <Button
                android:id="@+id/btn_start_game"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:text="@string/start_game"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>