<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen"
    android:background="#26013C">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="24dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/tic_tac_toe_app_icon"
            android:layout_marginTop="200dp"/>

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="12sp"
            android:textStyle="normal"
            android:layout_marginTop="15dp"
            android:textColor="@color/light_white"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="250dp">

            <TextView
                android:id="@+id/designer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/designed_by"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/light_white"
                android:layout_marginTop="7dp"/>

            <ImageView
                android:id="@+id/designerLogo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ra_logo"
                android:adjustViewBounds="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
